assets/components/character-counter/_character-counter.scss
.char-counter {
  position: relative;
  margin-bottom: 1.5em;
  display: block;

  [data-char-field] {
    height: 70px;

    @include media(tablet) {
      width: auto;
    }
  }

  @include media(tablet) {
    display: inline-block;
  }
}

.char-counter-text {
  color: #6f777b;
  text-align: right;
}

